# data-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  example.env  go.mod  pyproject.toml
.github/workflows/: deploy-to-gce.yaml
cmd/cec_legislator/: main.go
cmd/data_gov_tw/: .gitignore  README.md  main.go
cmd/legislator/: main.go
cmd/party/: main.go
data_pipeline/: legislators.py
deployment/: docker-compose.yaml
golang/: .env.example  README.md  go.mod  go.sum
golang/cec/: votedata.go
golang/cmd/data_gov_tw/: main.go  to_db.go
golang/cmd/legislator/: main.go
golang/cmd/parties/: main.go
golang/cmd/politicians/: main.go
golang/util/: util.go
init/: pg.sql
prefect_infra/: Dockerfile
prefect_infra/deploy_flows/: hello_deploy.py  hi_deploy.py  run_all.sh  test_hi_deploy.py
python/: pyproject.toml
python/scripts/: vote_data.py
